Recipe Page Main

--- a/Public/index.html
+++ b/Public/index.html
@@ -17,7 +17,7 @@
     <section class="egg-png">
         <img class="egg_image" src="/Public/Assets/Images/image-omelette.jpeg" alt="This is a Picture of an omelette"/>
         <div class="egg-header">
-            <h1 class="eegg-title">Simple Omelette Recipe</h1>
+            <h1 class="egg-title">Simple Omelette Recipe</h1>
             <p class="egg-description">An easy and quick dish, perfect for any meal. This classic omelette
                 combines beaten eggs cooked to perfection, optionally filled with
                 your choice of cheese, vegetables, or meats.
@@ -44,8 +44,65 @@
         <h2 class="egg-engredients-title">Ingredients</h2>
 
         <ul class="egg-engredients-list">
-            <li class="card__ingredients-item"></li>
+            <li class="egg-ingredients-item">2-3 large eggs</li>
+            <li class="egg-ingredients-item">Pepper, to taste</li>
+            <li class="egg-engredients-item">1 tablespoon of butter or oil</li>
+            <li class="egg-engredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+
         </ul>
+    </section>
+    <section class="egg-instruction">
+        <h2 class="egg-instruction-title">Instructions</h2>
+
+        <ol class="egg-instruction-list">
+            <li class="egg-instruction-item">Beat the eggs: In a bowl, 
+                beat the eggs with a pinch of salt and pepper until they are well mixed. 
+                You can add a tablespoon of water or milk for a fluffier mixture.
+            </li>
+            <li class="egg-instruction-item">Heat the pan: Place a non-stick 
+                frying pan over medium heat and butter or oil.
+            </li>
+            <li class="egg-instruction-item">Cook the omelette: Once the butter is melted and bubbling, 
+                pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+            </li>
+            <li class="egg-instruction-item">Add fillings (Optional): When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+            </li>
+            <li class="egg-instruction-item"> Fold and serve: As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+            </li>
+            <li class="egg-instruction-item">Enjoy: : Serve hot, with additional salt and pepper
+                if needed.</li>
+        </ol>
+    </section>
+    <section class="egg-nutrition">
+        <h2 class="egg-nutrition-title">Nutrition</h2>
+        <p class="egg-nutrition-desciption">The table below shows nutritional values per serving without the
+            additional fillings.</p>
+
+        <tbody class="egg-nutrition-list">
+            <tr class="egg-nutrition-item">
+                <th>Calories</th>
+                <td>277kcal</td>
+            </tr>
+
+            <tr class="egg-nutrition-item">
+                <th>Carbs</th>
+                <td>0g</td>
+            </tr>
+
+            <tr class="egg-nutrition-item">
+                <th>Protein</th>
+                <td>20g</td>
+            </tr>
+
+            <tr class="egg-nutrition-item">
+                <th>Fat</th>
+                <td>22g</td>
+            </tr>
+        </tbody>
     </section>
 </body>
 </html>
